# micro_doom

./: .gitignore  CMakeLists.txt  Kconfig  README.md
.github/workflows/: cmake-multi-platform.yml
boards/: esp32.conf  esp32.overlay  esp32_devkitc_procpu.conf  esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wroom_procpu.overlay  esp32s3_devkitc_dongle.conf  esp32s3_devkitc_dongle.overlay  esp32s3_devkitc_esp32s3_procpu.overlay  esp32s3_devkitc_nodongle.conf  esp32s3_devkitc_nodongle.overlay  native_sim.conf  native_sim.overlay  rpi_pico.conf  rpi_pico.overlay
boards/esp32/: esp32.conf  esp32.overlay
boards/pico/: pico.conf  pico.overlay
inc/: main.h  user_controls.h  user_debug.h  user_display.h  user_flash.h  user_game.h  user_main.h  user_test_images.h  user_time.h
port/Doom/include/: d_think.h  doomdef.h  global_data.h  i_memory.h  i_spi_support.h  i_video.h  p_map.h  p_mobj.h  p_spec.h  r_defs.h  st_gfx.h  st_stuff.h  z_zone.h
port/Doom/source/: am_map.c  d_client.c  d_main.c  f_finale.c  f_wipe.c  g_game.c  hu_lib.c  hu_stuff.c  i_audio.c  i_main.c  i_video.c  m_random.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_setup.c  p_sight.c  p_spec.c  p_switch.c  r_data.c  r_draw.c  r_fast_stuff.c  r_main.c  r_patch.c  s_sound.c  st_gfx.c  st_lib.c  st_stuff.c  tables.c  v_video.c  w_wad.c  wi_stuff.c  z_zone.c
port/src/: delay.h  display.c  display.h  graphics.c  graphics.h  keyboard.c  keyboard.h  main.c  main.h  pwm_audio.c  qspi.c  qspi.h  usb.c  usb.h
src/: main.c  user_controls.c  user_debug.c  user_display.c  user_flash.c  user_game.c  user_main.c  user_time.c
