# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

set(BOARD esp32)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(esp_doom)

include_directories(
	./inc
	./port/src
	./port/Doom/include
)

target_sources(app PRIVATE src/user_main.c)
target_sources(app PRIVATE src/user_display.c)
target_sources(app PRIVATE src/user_flash.c)
target_sources(app PRIVATE src/user_time.c)

target_sources(app PRIVATE port/src/display.c)
target_sources(app PRIVATE port/src/main.c)
target_sources(app PRIVATE port/src/printf.c)
# target_sources(app PRIVATE port/src/usb.c)
# target_sources(app PRIVATE port/src/usbCdc.c)
# target_sources(app PRIVATE port/src/usbDeviceImplementation.c)
# target_sources(app PRIVATE port/src/ymodem.c)
target_sources(app PRIVATE port/src/display.c)
target_sources(app PRIVATE port/src/font8x8.c)
target_sources(app PRIVATE port/src/graphics.c)
target_sources(app PRIVATE port/src/pwm_audio.c)
target_sources(app PRIVATE port/src/qspi.c)
target_sources(app PRIVATE port/src/keyboard.c)

target_sources(app PRIVATE port/Doom/source/am_map.c)
target_sources(app PRIVATE port/Doom/source/d_client.c)
target_sources(app PRIVATE port/Doom/source/d_items.c)
target_sources(app PRIVATE port/Doom/source/d_main.c)
target_sources(app PRIVATE port/Doom/source/doom_iwad.c)
target_sources(app PRIVATE port/Doom/source/f_finale.c)
target_sources(app PRIVATE port/Doom/source/f_wipe.c)
target_sources(app PRIVATE port/Doom/source/g_game.c)
target_sources(app PRIVATE port/Doom/source/global_data.c)
target_sources(app PRIVATE port/Doom/source/hu_lib.c)
target_sources(app PRIVATE port/Doom/source/hu_stuff.c)
target_sources(app PRIVATE port/Doom/source/i_audio.c)
target_sources(app PRIVATE port/Doom/source/i_main.c)
target_sources(app PRIVATE port/Doom/source/i_spi_support.c)
target_sources(app PRIVATE port/Doom/source/i_video.c)
target_sources(app PRIVATE port/Doom/source/info.c)
target_sources(app PRIVATE port/Doom/source/m_bbox.c)
target_sources(app PRIVATE port/Doom/source/m_cheat.c)
target_sources(app PRIVATE port/Doom/source/m_menu.c)
target_sources(app PRIVATE port/Doom/source/m_random.c)
target_sources(app PRIVATE port/Doom/source/p_ceilng.c)
target_sources(app PRIVATE port/Doom/source/p_doors.c)
target_sources(app PRIVATE port/Doom/source/p_enemy.c)
target_sources(app PRIVATE port/Doom/source/p_floor.c)
target_sources(app PRIVATE port/Doom/source/p_genlin.c)
target_sources(app PRIVATE port/Doom/source/p_inter.c)
target_sources(app PRIVATE port/Doom/source/p_lights.c)
target_sources(app PRIVATE port/Doom/source/p_map.c)
target_sources(app PRIVATE port/Doom/source/p_maputl.c)
target_sources(app PRIVATE port/Doom/source/p_mobj.c)
target_sources(app PRIVATE port/Doom/source/p_plats.c)
target_sources(app PRIVATE port/Doom/source/p_pspr.c)
target_sources(app PRIVATE port/Doom/source/p_setup.c)
target_sources(app PRIVATE port/Doom/source/p_sight.c)
target_sources(app PRIVATE port/Doom/source/p_spec.c)
target_sources(app PRIVATE port/Doom/source/p_switch.c)
target_sources(app PRIVATE port/Doom/source/p_telept.c)
target_sources(app PRIVATE port/Doom/source/p_tick.c)
target_sources(app PRIVATE port/Doom/source/p_user.c)
target_sources(app PRIVATE port/Doom/source/r_data.c)
target_sources(app PRIVATE port/Doom/source/r_draw.c)
target_sources(app PRIVATE port/Doom/source/r_fast_stuff.c)
target_sources(app PRIVATE port/Doom/source/r_main.c)
target_sources(app PRIVATE port/Doom/source/r_patch.c)
target_sources(app PRIVATE port/Doom/source/r_plane.c)
target_sources(app PRIVATE port/Doom/source/r_things.c)
target_sources(app PRIVATE port/Doom/source/s_sound.c)
target_sources(app PRIVATE port/Doom/source/sounds.c)
target_sources(app PRIVATE port/Doom/source/st_gfx.c)
target_sources(app PRIVATE port/Doom/source/st_lib.c)
target_sources(app PRIVATE port/Doom/source/st_stuff.c)
target_sources(app PRIVATE port/Doom/source/tables.c)
target_sources(app PRIVATE port/Doom/source/v_video.c)
target_sources(app PRIVATE port/Doom/source/version.c)
target_sources(app PRIVATE port/Doom/source/w_wad.c)
target_sources(app PRIVATE port/Doom/source/wi_stuff.c)
target_sources(app PRIVATE port/Doom/source/z_bmalloc.c)
target_sources(app PRIVATE port/Doom/source/z_zone.c)